# yogsloader

./: .gitignore  build.gradle  settings.gradle
.androidide/editor/: openedFiles.json
Bcore/: build.gradle
Bcore/src/main/cpp/: Application.mk
Bcore/src/main/cpp/Hook/: DexFileHook.cpp
Bcore/src/main/java/black/com/android/internal/net/: VpnConfig.java
Bcore/src/main/java/top/niunaijun/blackbox/core/: NativeCore.java
Bcore/src/main/java/top/niunaijun/blackbox/core/system/: DaemonService.java
Bcore/src/main/java/top/niunaijun/blackbox/core/system/am/: BroadcastManager.java
Bcore/src/main/java/top/niunaijun/blackbox/fake/service/: VpnCommonProxy.java
Bcore/src/main/java/top/niunaijun/blackbox/proxy/: ProxyVpnService.java
app/: build.gradle
app/libs/: Bcore-release.aar
app/release/: output-metadata.json
app/src/androidTest/java/com/yogs/loadervip/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: sock64
app/src/main/java/com/yogs/loadervip/: ApkEnv.java  BoxApplication.java  ESPView.java  FloatAim.java  FloatLogo.java  MainActivity.java  NetworkConnection.java  Overlay.java
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  ESP.h  Hacks.h  desi.cpp  desi.cpp.bak  import.h  obfuscate.h  socket.h  struct.h
app/src/main/jni/bypass/: main.cpp
app/src/main/jni/bypass/patch/: Macros.h  Utils.h
app/src/main/jni/sock/: Offsets.h  Shoolin.cpp
app/src/main/jni/sock/INCLUDE/: CameraView.h  includes.h  includes.h.bak  init.h  socket.h  struct.h  struct.h.bak  support.h  support.h.bak
app/src/main/res/drawable/: bg.xml  bg1.xml  esp.xml  ic_aimback.xml  ic_play_arrow.xml  ic_stop.xml  ic_switch_off.xml  ic_switch_on.xml  loot.xml  main.xml  round.xml  track.xml
app/src/main/res/layout/: activity_main.xml  float_logo.xml  floataimbot.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/yogs/loadervip/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
